# FetchLibTest

./: CMakeLists.txt  bad_lib.cppm  bar.cppm  foo.cppm  lib.cppm  test.cpp
